CI: add dev branch to github action
add dev branch for github action to check the pull requests that would be made on the dev branch

--- a/.github/workflows/pullRequestCi.yml
+++ b/.github/workflows/pullRequestCi.yml
@@ -3,7 +3,9 @@ name: test pull request
 
 on:
   pull_request:
-    branches: [ main ]
+    branches:
+          - main
+          - dev
 
   workflow_dispatch:
 
