--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,9 +11,7 @@
   },
   "extends": [
     "eslint:recommended",
-    "plugin:react/recommended",
-    "plugin:prettier/recommended"
-  ],
+    "plugin:react/recommended"  ],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
