--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,10 +10,7 @@
     "jest": true
   },
   "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended",
-    "plugin:prettier/recommended"
-  ],
+    "plugin:react/recommended"  ],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
