--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,10 @@
     "jest": true
   },
   "extends": [
-    "plugin:react/recommended"  ],
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:prettier/recommended"
+  ],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
