--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,9 +9,7 @@
     "es2021": true,
     "jest": true
   },
-  "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended"  ],
+  "extends": ["eslint:recommended", "plugin:react/recommended"],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
@@ -20,5 +18,5 @@
     "sourceType": "module"
   },
   "plugins": ["react"],
-  "rules": { "react/react-in-jsx-scope": "off" }
+  "rules": { "react/react-in-jsx-scope": "off", "react/prop-types": "off" }
 }
