--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "react-google-login": "^5.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
